plugins {
    id 'java'
    id 'application'
}

ext.moduleName = 'org.bitcoinj.secp.examples'

dependencies {
    implementation project(':secp-api')
    runtimeOnly project(':secp-bouncy')
    runtimeOnly project(':secp-ffm')
}

tasks.withType(JavaCompile).configureEach {
    // Override Default release version
    options.release = 25
}

jar {
    inputs.property("moduleName", moduleName)
    manifest {
        attributes  'Implementation-Title': 'Example secp256k1-jdk Apps',
                'Implementation-Version': archiveVersion.get()
    }
}

application {
    mainModule = 'org.bitcoinj.secp.examples'
    mainClass = 'org.bitcoinj.secp.examples.Schnorr'
    applicationName = 'schnorr-example'
}

run {
    jvmArgs += '--enable-native-access=org.bitcoinj.secp.ffm'
}

tasks.register('runEcdsa', JavaExec) {
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(javaToolchainVersion)
    }
    classpath = sourceSets.main.runtimeClasspath
    mainModule = 'org.bitcoinj.secp.examples'
    mainClass = 'org.bitcoinj.secp.examples.Ecdsa'
    jvmArgs += '--enable-native-access=org.bitcoinj.secp.ffm'
}
